# ezon-gpx

./: README.md  cli.py  main.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml  test.yml
src/: cli.py
test/: cli.test.sh  test.gpx
