[project]
name = "ezon-gpx"
version = "1.0.0"
authors = [{ name = "Uiolee" }]
maintainers = [{ name = "Uiolee" }]
description = "convert Ezon gpx files."
keywords = ["ezon", "gpx", "xml", "running_page"]
readme = "README.md"
license = { file = "LICENSE" }

classifiers = [
    "Development Status :: 4 - Beta",

    "Topic :: Text Processing :: Markup :: XML",
    "Topic :: File Formats",
    "Topic :: Utilities",

    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",

    "Natural Language :: English",

    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",

    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/uiolee/ezon-gpx"
Issues = "https://github.com/uiolee/ezon-gpx/issues"

[project.scripts]
ezon-gpx = "cli:cli"
